# AndromedaRust

./: .env  .gitignore  Cargo.toml  LICENSE  api_key.txt  build.bat  build.rs  note_editing_1.rs
.VSCodeCounter/2026-01-13_23-08-32/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
assets/plugins/builtin/: batch_edit.lua  flip_x.lua  flip_y.lua  humanize.lua
assets/plugins/custom/: HZ-Chop.lua  (+4 more)
assets/shaders/: data_view_bg.frag  data_view_handles.frag  data_view_handles.vert  piano_roll_bg.frag  piano_roll_bg.vert  piano_roll_kb.frag  piano_roll_kb.vert  piano_roll_note.vert  track_view_bg.frag  track_view_bg.vert  track_view_note.vert
shaders/: data_view_bg.vert  piano_roll_bg.frag  piano_roll_bg.vert  piano_roll_note.frag  piano_roll_note.vert  track_view_bg.frag  track_view_bg.vert  track_view_note.frag  track_view_note.vert
src/: app.rs  audio.rs  editor.rs  main.rs  midi.rs  util.rs
src/app/: custom_widgets.rs  main_window.rs  rendering.rs  shared.rs  ui.rs  util.rs  view_settings.rs
src/audio/: event_playback.rs  kdmapi_engine.rs  midi_audio_engine.rs  midi_devices.rs  track_mixer.rs
src/editor/: actions.rs  edit_functions.rs  editing.rs  keybinds.rs  meta_editing.rs  midi_bar_cacher.rs  navigation.rs  note_editing.rs  playhead.rs  plugins.rs  project.rs  project_data.rs  selection_box.rs  settings.rs  tempo_map.rs  track_editing.rs  util.rs
src/midi/: events.rs  io.rs  midi_file.rs  midi_track.rs  midi_track_parser.rs
src/util/: debugger.rs  expression_parser.rs  system_stats.rs  timer.rs
(+40 files in other folders)
