[package]
name = "AndromedaRust"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
eframe = { version = "0.31.1", features = ["glow"] }
egui_double_slider = "0.8.0"
egui_extras = { version = "0.31.1", features = ["image"] }
rfd = "0.14"
itertools = "0.14.0"
num-traits = "0.2.19"
midir = "0.10.2"
rtrb = "0.3.2"
crossbeam = "0.8.4"
arc-swap = "1.7.1"
ordered-float = "5.0.0"
rounded-div = "0.1.3"
rayon = "1.11.0"
png = "0.18.0"
image = "0.25.8"
url = "2.5.7"
as-any = "0.3.2"
mlua = { version = "0.11.4", features = ["luajit", "vendored"] }
include_dir = "0.7"
luajit-src = "210.6.1"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "windows", target_os = "macos"))'.dependencies]
kdmapi-rs = { package = "kdmapi", git = "https://github.com/BlackMIDIDevs/kdmapi-rs", rev = "994220f" }
